--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>취업지원</td>
                     <td>청년일자리 첫걸음 보장제</td>
                     <td>졸업생 특화프로그램</td>
@@ -73,7 +73,7 @@
                     <td><a href="./pc/UI_ADHPAaM01.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>취업지원</td>
                     <td>청년일자리 첫걸음 보장제</td>
                     <td>졸업생 특화프로그램</td>
@@ -85,7 +85,7 @@
                     <td><a href="./pc/UI_ADHPAaM02.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -94,10 +94,10 @@
                     <td>참여신청서 - 목록 없음</td>
                     <td>UI_ADHPAbM01</td>
                     <td class="status"></td>
-                    <td><a href="" target="_blank">바로가기</a></td>
+                    <td><a href="./pc/UI_ADHPAbM01" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -109,7 +109,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -121,7 +121,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -133,7 +133,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -145,7 +145,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -157,7 +157,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -169,7 +169,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -181,7 +181,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -193,7 +193,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -205,7 +205,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -217,7 +217,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -229,7 +229,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -241,7 +241,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -253,7 +253,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -265,7 +265,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -277,7 +277,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -289,7 +289,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -301,7 +301,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -313,7 +313,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -325,7 +325,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -337,7 +337,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -349,7 +349,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -361,7 +361,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -373,7 +373,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td class="no"></td>
+                    <td></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
