--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -185,7 +185,7 @@
                             <div class="tab_wrap bg_type" data-role="tab">
                                 <div class="wk_gsprog_uni">
                                     <div class="step_cont">
-                                        <h3 class="t2_sb m-b16">신청 및 참여 절차</h3>
+                                        <h3 class="t2_sb mb16">신청 및 참여 절차</h3>
                                         <div class="step_cont_area">
                                             <ol>
                                                 <li>
@@ -353,111 +353,93 @@
                                                 </colgroup>
                                                 <thead>
                                                     <tr>
-                                                        <th id="number" scope="col">No</th>
-                                                        <th id="uni_name" scope="col">대학교명</th>
-                                                        <th id="address" scope="col">소재지</th>
-                                                        <th id="tel" scope="col">전화번호</th>
-                                                        <th id="program" scope="col">운영 프로그램</th>
-                                                        <th id="apply" scope="col">신청</th>
+                                                        <th scope="col">번호</th>
+                                                        <th scope="col">대학교명</th>
+                                                        <th scope="col">소재지</th>
+                                                        <th scope="col">전화번호</th>
+                                                        <th scope="col">운영 프로그램</th>
+                                                        <th scope="col">신청</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>1</td>
                                                         <td>AAA 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) AAA 대학교</td>
                                                         <td>000-0000-0000</td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="AAA 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
                                                         <td><button type="button" class="btnType_b1" aria-label="AAA 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>2</td>
                                                         <td>BBB 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) BBB대학교</td>
                                                         <td></td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="BBB 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="BBB 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>3</td>
                                                         <td>CCC 대학교</td>
                                                         <td>서울특별시 노원구 공릉로 232(공릉동) CCC 대학교</td>
                                                         <td>000-0000-0000</td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="CCC 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="CCC 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>4</td>
                                                         <td>DDD 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) DDD 대학교</td>
                                                         <td></td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="DDD 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="DDD 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>5</td>
                                                         <td>EEE 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) EEE 대학교</td>
                                                         <td></td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="EEE 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="EEE 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>6</td>
                                                         <td>FFF 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) FFF 대학교</td>
                                                         <td>000-0000-0000</td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="FFF 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="FFF 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>7</td>
                                                         <td>GGG 대학교</td>
                                                         <td>서울특별시 광진구 능동로 209(군자동) GGG 대학교</td>
                                                         <td>000-0000-0000</td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="GGG 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="GGG 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>8</td>
                                                         <td>HHH 대학교</td>
                                                         <td>경기도 수원시 영통구 광교산로 154-42(이의동) HHH 대학교</td>
                                                         <td></td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="HHH 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="HHH 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>9</td>
                                                         <td>III 대학교</td>
                                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) III 대학교</td>
                                                         <td>000-0000-0000</td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="III 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
-
                                                         <td><button type="button" class="btnType_b1" aria-label="III 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="no"></td>
+                                                        <td>10</td>
                                                         <td>JJJ 대학교</td>
                                                         <td>경기도 수원시 영통구 광교산로 154-42(이의동) JJJ 대학교</td>
                                                         <td>000-0000-0000</td>
                                                         <td><button type="button" class="linkPop btnType_b1" aria-label="JJJ 대학교 운영 프로그램 상세보기" onclick="location.href='./UI_ADHPAaM02.html'">보기</button></td>
-                                                        <!-- 개발적용시 버튼 구현필요 -->
                                                         <td><button type="button" class="btnType_b1" aria-label="JJJ 대학교 프로그램 신청하기">신청하기</button></td>
                                                     </tr>
 
