--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>취업지원</td>
                     <td>청년일자리 첫걸음 보장제</td>
                     <td>졸업생 특화프로그램</td>
@@ -73,7 +73,7 @@
                     <td><a href="./pc/UI_ADHPAaM01.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>취업지원</td>
                     <td>청년일자리 첫걸음 보장제</td>
                     <td>졸업생 특화프로그램</td>
@@ -85,7 +85,7 @@
                     <td><a href="./pc/UI_ADHPAaM02.html" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -93,11 +93,11 @@
                     <td></td>
                     <td>참여신청서 - 목록 없음</td>
                     <td>UI_ADHPAbM01</td>
-                    <td class="status"></td>
+                    <td class="status">작업중</td>
                     <td><a href="./pc/UI_ADHPAbM01" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -105,107 +105,107 @@
                     <td></td>
                     <td>참여신청서 - 목록 있음</td>
                     <td>UI_ADHPAbM02</td>
-                    <td class="status"></td>
-                    <td><a href="" target="_blank">바로가기</a></td>
+                    <td class="status">작업중</td>
+                    <td><a href="./pc/UI_ADHPAbM02" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 등록</td>
-                    <td>UI_ADHPAbM03</td>
+                    <td>UI_ADHPAbS03</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 조회</td>
-                    <td>UI_ADHPAbM04</td>
+                    <td>UI_ADHPAbS04</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>참여신청서 - 회수(수정)</td>
-                    <td>UI_ADHPAbM05</td>
+                    <td>UI_ADHPAbS05</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>운영 대학 검색 팝업</td>
-                    <td>UI_ADHPAbM06</td>
+                    <td>UI_ADHPAbP06</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록</td>
-                    <td>UI_ADHPAbM07</td>
+                    <td>UI_ADHPAbP07</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(계열분류)</td>
-                    <td>UI_ADHPAbM08</td>
+                    <td>UI_ADHPAbP08</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>전공찾기팝업 - 조회/선택/등록(검색결과)</td>
-                    <td>UI_ADHPAbM09</td>
+                    <td>UI_ADHPAbP09</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
                     <td>참여신청서</td>
                     <td></td>
                     <td>개인정보 수집·이용·제공에 대한 동의서(참여자용)</td>
-                    <td>UI_ADHPAbM10</td>
+                    <td>UI_ADHPAbP10</td>
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -217,7 +217,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -229,7 +229,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -241,7 +241,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -253,7 +253,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -265,7 +265,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -277,7 +277,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -289,7 +289,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -301,7 +301,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -313,7 +313,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -325,7 +325,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -337,7 +337,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -349,7 +349,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -361,7 +361,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -373,7 +373,7 @@
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="no"></td>
                     <td>마이페이지</td>
                     <td>참여 프로그램 관리</td>
                     <td>졸업생 특화프로그램 관리</td>
@@ -384,7 +384,6 @@
                     <td class="status"></td>
                     <td><a href="" target="_blank">바로가기</a></td>
                 </tr>
-                
             </tbody>
         </table>
     </body>
