--- a/pc/UI_ADHPAbM01.html
+++ b/pc/UI_ADHPAbM01.html
@@ -176,29 +176,40 @@
                             </div>
                             <!-- 콘텐츠영역 시작 -->
                             <div class="tab_wrap bg_type" data-role="tab">
-                                <ul class="tab_title topTab" role="tablist">
-                                    <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
-                                    <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
-                                    <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담 이력</span></button></li>
-                                    <!-- D: 활성화시 class[active] add -->
-                                </ul>
 
-                                <div class="box_notice_wrap mt24">
-                                    <p class="tit">안내</p>
-                                    <ul class="box_list_area">
-                                        <li class="txt_list">제출하신 참여신청서가 승인된 후, 해당 대학의 프로그램을 신청하실 수 있습니다.</li>
-                                        <li class="txt_list">여러 대학의 프로그램에 참여를 원하실 경우, 대학마다 별도로 참여신청서를 제출해 주셔야 합니다.</li>
-                                        <li class="txt_list">운영 대학의 졸업생이 아니어도 참여신청서를 제출하실 수 있습니다.</li>
-                                    </ul>
+
+
+                                <div class="mypage">
+                                    <div class="progmg">
+                                        <ul class="tab_title topTab" role="tablist">
+                                            <li aria-controls="" class="active"><button type="button" role="tab" aria-selected="true"><span>참여신청서</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>참여 프로그램</span></button></li>
+                                            <li aria-controls=""><button type="button" role="tab" aria-selected="false"><span>상담 이력</span></button></li>
+                                            <!-- D: 활성화시 class[active] add -->
+                                        </ul>
+
+                                        <div class="box_notice_wrap mt24">
+                                            <p class="tit">안내</p>
+                                            <ul class="box_list_area">
+                                                <li class="txt_list">제출하신 참여신청서가 승인된 후, 해당 대학의 프로그램을 신청하실 수 있습니다.</li>
+                                                <li class="txt_list">여러 대학의 프로그램에 참여를 원하실 경우, 대학마다 별도로 참여신청서를 제출해 주셔야 합니다.</li>
+                                                <li class="txt_list">운영 대학의 졸업생이 아니어도 참여신청서를 제출하실 수 있습니다.</li>
+                                            </ul>
+                                        </div>
+
+                                        <div class="pa_page_empty mt80">
+                                            <figure class="mb24"><img src=""><img src="./images/ico60_warning_navy.svg"></figure>
+                                            <p>작성하신 졸업생 특화프로그램 참여신청서가 없습니다.</p>
+                                            <div class="box_btn_wrap mt40">
+                                                <a href="#none" class="btn large type01 fill" onclick="">신청서 작성</a>
+                                            </div>                                  
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="pa_page_empty mt80">
-                                    <figure class="mb24"><img src=""><img src="./images/ico60_warning_navy.svg"></figure>
-                                    <p>작성하신 졸업생 특화프로그램 참여신청서가 없습니다.</p>
-                                    <div class="box_btn_wrap mt40">
-                                        <a href="#none" class="btn large type01 fill" onclick="">신청서 작성</a>
-                                    </div>                                  
-                                </div>
+
+
+                                
                             </div>
                             <!-- 콘텐츠영역 끝 -->
 
