--- a/pc/sample.html
+++ b/pc/sample.html
@@ -206,5 +206,6 @@
         </div>
     </body>
     <script src="../pc/js/include.js"></script>
+    <script src="../pc/js/cotents.js"></script>
 
 </html>
